css/pagestyle.css
@import url('https://fonts.googleapis.com/css2?family=Radio+Canada&display=swap');


body {
    font-family: 'Radio Canada', sans-serif;
    color: white;
    background-color: #212121;
    margin-left: auto;
    margin-right: auto;
    max-width: 95%;
    min-width: 256px;
    padding-top: 1%;
    padding-bottom: 0;
    padding-left: 2%;
    padding-right: 2%;
    border-radius: 10px;
}

div.main {
}




@media all and (min-width: 900px) {
    article{
        float:left;
        width:60%;

    }

    aside{
        float:right;
        padding-left:24px;
        width:30%;
    }

    footer{
        clear:both;
    }

}



/*old background color: 010406*/
html {
    background: #181818;
    background-size: 10px 10px;
}

nav {
    float:right;
}



nav ul {
    list-style-type: none;
    background-color: #212121;
    border-block: 10px;
    font-weight: bold;
    padding: 16px;
}

    nav ul li {
        display: inline;
        border-right: 8px;
        padding-right: 8px;
        padding-left: 8px;
    }

        nav ul li:last-child {
            border-right: none;
        }

        nav ul li a {
            text-decoration: none;
            color: white;
        }

nav li.selected {
    color: #b6b6b6;
}

nav li a:hover {
    text-decoration: underline;
}


article {
    background-color: #3d3d3d;
    color: white;
    padding: 2px;
    padding-left: 10px;
    padding-bottom: 5px;
    margin-bottom: 10px;
    border-radius: 10px;
}

article a {
    text-decoration:underline;
    color:lightgray;
}



article.releases p {
        padding: 8px
    }

article.releases img {
        float: left;
        margin-right: 15px;
        border-radius: 7px;
    }

article.blog p {
        padding: 8px
    }

article.blog img {
        float: left;
        margin-right: 15px;
        border-radius: 15px;
    }





footer {
    background-color: #181818;
    width: 100%;
    text-align: left;
    padding-top: 1%;
    padding-bottom: 1%;
    padding-left: 3%;
    padding-right: 3%;
    margin-right: -3%;
    margin-left: -3%;
    margin-bottom: -1%;
    width: auto;
}


footer a{
    color: aliceblue;


}




article.about {
    /*background: linear-gradient(#077cff, #ff8300)*/
}

article.about p {
    padding: 8px;
}

header {
    background-color: #212121;
    position: center;
    right: 0px;
    width: 50%;
    padding: 10px;
}



aside {
    background-color: #3d3d3d;
    padding: 2px;
    padding-left: 10px;
    padding-bottom: 5px;
    margin-bottom: 10px;
    border-radius: 10px;
}

aside a {
    color: lightblue;


}


p.date {
    font-size: 75%;
    color: dimgray;
    float: right;
}

